--- a/WDD-A6-WebServer/WDD-A6-WebServer.csproj
+++ b/WDD-A6-WebServer/WDD-A6-WebServer.csproj
@@ -46,7 +46,7 @@
     <Compile Include="HTTPHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerListener.cs" />
+    <Compile Include="WebServerListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
