--- a/WDD-A6-WebServer/WDD-A6-WebServer.csproj
+++ b/WDD-A6-WebServer/WDD-A6-WebServer.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HTTPHandler.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebServerListener.cs" />
