--- a/WDD-A6-WebServer/WDD-A6-WebServer.csproj
+++ b/WDD-A6-WebServer/WDD-A6-WebServer.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestData.cs" />
     <Compile Include="WebServerListener.cs" />
   </ItemGroup>
   <ItemGroup>
