--- a/WDD-A6-UnitTests/WDD-A6-UnitTests.csproj
+++ b/WDD-A6-UnitTests/WDD-A6-UnitTests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="HttpHandlerUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
